<resources>
    <string name="app_name">Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="clear_text">AC</string>
    <string name="change_sign">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="hint_value">0</string>
    <string name="change_theme">Change theme</string>
    <string name="orange_theme">Orange theme</string>
    <string name="blue_theme">Blue theme</string>
    <string name="return_button">Return</string>
</resources>