<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/default_parent_padding"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_layout_weight"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="cursive"
        android:textSize="@dimen/text_size"
        android:textAlignment="textEnd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/clear_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/change_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/change_sign" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/percent" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/number_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/number_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_4" />

        <Button
            android:id="@+id/number_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_5" />

        <Button
            android:id="@+id/number_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_6" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/minus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_7" />

        <Button
            android:id="@+id/number_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_8" />

        <Button
            android:id="@+id/number_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_9" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/multiply" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/point" />

        <Button
            android:id="@+id/equally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:backgroundTint="@color/functional_button"
            android:text="@string/equally" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5" />

</LinearLayout>